--- a/dev_data_analysis.ipynb
+++ b/dev_data_analysis.ipynb
@@ -117,143 +117,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 76 entries, 0 to 7\n",
+      "Int64Index: 125 entries, 0 to 36\n",
       "Data columns (total 4 columns):\n",
       " #   Column      Non-Null Count  Dtype \n",
       "---  ------      --------------  ----- \n",
-      " 0   name        76 non-null     object\n",
-      " 1   date        76 non-null     object\n",
-      " 2   start_time  76 non-null     object\n",
-      " 3   end_time    76 non-null     object\n",
+      " 0   name        125 non-null    object\n",
+      " 1   date        125 non-null    object\n",
+      " 2   start_time  125 non-null    object\n",
+      " 3   end_time    125 non-null    object\n",
       "dtypes: object(4)\n",
-      "memory usage: 3.0+ KB\n"
+      "memory usage: 4.9+ KB\n"
      ]
     }
    ],
    "source": [
     "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>date</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>end_time</th>\n",
-       "      <th>start_time_datetime</th>\n",
-       "      <th>end_time_datetime</th>\n",
-       "      <th>minutes</th>\n",
-       "      <th>date_datetime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alpha</td>\n",
-       "      <td>2020.11.09</td>\n",
-       "      <td>11:00</td>\n",
-       "      <td>12:00</td>\n",
-       "      <td>1900-01-01 11:00:00</td>\n",
-       "      <td>1900-01-01 12:00:00</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>2020-11-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Delta</td>\n",
-       "      <td>2020.11.09</td>\n",
-       "      <td>11:00</td>\n",
-       "      <td>12:00</td>\n",
-       "      <td>1900-01-01 11:00:00</td>\n",
-       "      <td>1900-01-01 12:00:00</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>2020-11-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Delta</td>\n",
-       "      <td>2020.11.09</td>\n",
-       "      <td>08:00</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>1900-01-01 08:00:00</td>\n",
-       "      <td>1900-01-01 15:00:00</td>\n",
-       "      <td>420.0</td>\n",
-       "      <td>2020-11-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Beta</td>\n",
-       "      <td>2020.11.09</td>\n",
-       "      <td>08:00</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>1900-01-01 08:00:00</td>\n",
-       "      <td>1900-01-01 15:00:00</td>\n",
-       "      <td>420.0</td>\n",
-       "      <td>2020-11-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Diqing</td>\n",
-       "      <td>2020.11.09</td>\n",
-       "      <td>19:00</td>\n",
-       "      <td>23:00</td>\n",
-       "      <td>1900-01-01 19:00:00</td>\n",
-       "      <td>1900-01-01 23:00:00</td>\n",
-       "      <td>240.0</td>\n",
-       "      <td>2020-11-09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     name        date start_time end_time start_time_datetime  \\\n",
-       "0   Alpha  2020.11.09      11:00    12:00 1900-01-01 11:00:00   \n",
-       "1   Delta  2020.11.09      11:00    12:00 1900-01-01 11:00:00   \n",
-       "2   Delta  2020.11.09      08:00    15:00 1900-01-01 08:00:00   \n",
-       "3    Beta  2020.11.09      08:00    15:00 1900-01-01 08:00:00   \n",
-       "4  Diqing  2020.11.09      19:00    23:00 1900-01-01 19:00:00   \n",
-       "\n",
-       "    end_time_datetime  minutes date_datetime  \n",
-       "0 1900-01-01 12:00:00     60.0    2020-11-09  \n",
-       "1 1900-01-01 12:00:00     60.0    2020-11-09  \n",
-       "2 1900-01-01 15:00:00    420.0    2020-11-09  \n",
-       "3 1900-01-01 15:00:00    420.0    2020-11-09  \n",
-       "4 1900-01-01 23:00:00    240.0    2020-11-09  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_r = preprocess_data(df)\n",
-    "df_r.head()"
    ]
   },
   {
@@ -290,82 +168,88 @@
        "      <th>end_time_datetime</th>\n",
        "      <th>minutes</th>\n",
        "      <th>date_datetime</th>\n",
+       "      <th>weekday</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>Nia.Dai</td>\n",
-       "      <td>2020.11.30</td>\n",
-       "      <td>16:20</td>\n",
-       "      <td>18:32</td>\n",
-       "      <td>1900-01-01 16:20:00</td>\n",
-       "      <td>1900-01-01 18:32:00</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>2020-11-30</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Alpha</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>1900-01-01 11:00:00</td>\n",
+       "      <td>1900-01-01 12:00:00</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>2020-11-09</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>Congyu</td>\n",
-       "      <td>2020.11.30</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Delta</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>1900-01-01 11:00:00</td>\n",
+       "      <td>1900-01-01 12:00:00</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>2020-11-09</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Delta</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>08:00</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>1900-01-01 08:00:00</td>\n",
+       "      <td>1900-01-01 15:00:00</td>\n",
+       "      <td>420.0</td>\n",
+       "      <td>2020-11-09</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Beta</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>08:00</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>1900-01-01 08:00:00</td>\n",
+       "      <td>1900-01-01 15:00:00</td>\n",
+       "      <td>420.0</td>\n",
+       "      <td>2020-11-09</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Diqing</td>\n",
+       "      <td>2020.11.09</td>\n",
        "      <td>19:00</td>\n",
-       "      <td>19:20</td>\n",
+       "      <td>23:00</td>\n",
        "      <td>1900-01-01 19:00:00</td>\n",
-       "      <td>1900-01-01 19:20:00</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>2020-11-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>62</th>\n",
-       "      <td>Amber</td>\n",
-       "      <td>2020.11.30</td>\n",
-       "      <td>21:30</td>\n",
-       "      <td>23:00</td>\n",
-       "      <td>1900-01-01 21:30:00</td>\n",
        "      <td>1900-01-01 23:00:00</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>2020-11-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>Chen Dong</td>\n",
-       "      <td>2020.11.30</td>\n",
-       "      <td>21:30</td>\n",
-       "      <td>23:00</td>\n",
-       "      <td>1900-01-01 21:30:00</td>\n",
-       "      <td>1900-01-01 23:00:00</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>2020-11-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>Nia.Dai</td>\n",
-       "      <td>2020.11.30</td>\n",
-       "      <td>21:30</td>\n",
-       "      <td>23:00</td>\n",
-       "      <td>1900-01-01 21:30:00</td>\n",
-       "      <td>1900-01-01 23:00:00</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>2020-11-30</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>2020-11-09</td>\n",
+       "      <td>Monday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         name        date start_time end_time start_time_datetime  \\\n",
-       "60    Nia.Dai  2020.11.30      16:20    18:32 1900-01-01 16:20:00   \n",
-       "61     Congyu  2020.11.30      19:00    19:20 1900-01-01 19:00:00   \n",
-       "62      Amber  2020.11.30      21:30    23:00 1900-01-01 21:30:00   \n",
-       "63  Chen Dong  2020.11.30      21:30    23:00 1900-01-01 21:30:00   \n",
-       "64    Nia.Dai  2020.11.30      21:30    23:00 1900-01-01 21:30:00   \n",
+       "     name        date start_time end_time start_time_datetime  \\\n",
+       "0   Alpha  2020.11.09      11:00    12:00 1900-01-01 11:00:00   \n",
+       "1   Delta  2020.11.09      11:00    12:00 1900-01-01 11:00:00   \n",
+       "2   Delta  2020.11.09      08:00    15:00 1900-01-01 08:00:00   \n",
+       "3    Beta  2020.11.09      08:00    15:00 1900-01-01 08:00:00   \n",
+       "4  Diqing  2020.11.09      19:00    23:00 1900-01-01 19:00:00   \n",
        "\n",
-       "     end_time_datetime  minutes date_datetime  \n",
-       "60 1900-01-01 18:32:00    132.0    2020-11-30  \n",
-       "61 1900-01-01 19:20:00     20.0    2020-11-30  \n",
-       "62 1900-01-01 23:00:00     90.0    2020-11-30  \n",
-       "63 1900-01-01 23:00:00     90.0    2020-11-30  \n",
-       "64 1900-01-01 23:00:00     90.0    2020-11-30  "
+       "    end_time_datetime  minutes date_datetime weekday  \n",
+       "0 1900-01-01 12:00:00     60.0    2020-11-09  Monday  \n",
+       "1 1900-01-01 12:00:00     60.0    2020-11-09  Monday  \n",
+       "2 1900-01-01 15:00:00    420.0    2020-11-09  Monday  \n",
+       "3 1900-01-01 15:00:00    420.0    2020-11-09  Monday  \n",
+       "4 1900-01-01 23:00:00    240.0    2020-11-09  Monday  "
       ]
      },
      "execution_count": 5,
@@ -374,7 +258,135 @@
     }
    ],
    "source": [
-    "df_r = this_week_table(df_r)\n",
+    "df_r = add_analysis_columns(df)\n",
+    "df_r.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>start_time_datetime</th>\n",
+       "      <th>end_time_datetime</th>\n",
+       "      <th>minutes</th>\n",
+       "      <th>date_datetime</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.07</td>\n",
+       "      <td>00:01</td>\n",
+       "      <td>00:50</td>\n",
+       "      <td>1900-01-01 00:01:00</td>\n",
+       "      <td>1900-01-01 00:50:00</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>2020-12-07</td>\n",
+       "      <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.08</td>\n",
+       "      <td>18:30</td>\n",
+       "      <td>19:30</td>\n",
+       "      <td>1900-01-01 18:30:00</td>\n",
+       "      <td>1900-01-01 19:30:00</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>2020-12-08</td>\n",
+       "      <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.10</td>\n",
+       "      <td>13:30</td>\n",
+       "      <td>14:00</td>\n",
+       "      <td>1900-01-01 13:30:00</td>\n",
+       "      <td>1900-01-01 14:00:00</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2020-12-10</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.10</td>\n",
+       "      <td>23:55</td>\n",
+       "      <td>23:59</td>\n",
+       "      <td>1900-01-01 23:55:00</td>\n",
+       "      <td>1900-01-01 23:59:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2020-12-10</td>\n",
+       "      <td>Thursday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.11</td>\n",
+       "      <td>00:01</td>\n",
+       "      <td>01:00</td>\n",
+       "      <td>1900-01-01 00:01:00</td>\n",
+       "      <td>1900-01-01 01:00:00</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>2020-12-11</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name        date start_time end_time start_time_datetime  \\\n",
+       "82  Congyu  2020.12.07      00:01    00:50 1900-01-01 00:01:00   \n",
+       "83  Congyu  2020.12.08      18:30    19:30 1900-01-01 18:30:00   \n",
+       "84  Congyu  2020.12.10      13:30    14:00 1900-01-01 13:30:00   \n",
+       "85  Congyu  2020.12.10      23:55    23:59 1900-01-01 23:55:00   \n",
+       "86  Congyu  2020.12.11      00:01    01:00 1900-01-01 00:01:00   \n",
+       "\n",
+       "     end_time_datetime  minutes date_datetime   weekday  \n",
+       "82 1900-01-01 00:50:00     49.0    2020-12-07    Monday  \n",
+       "83 1900-01-01 19:30:00     60.0    2020-12-08   Tuesday  \n",
+       "84 1900-01-01 14:00:00     30.0    2020-12-10  Thursday  \n",
+       "85 1900-01-01 23:59:00      4.0    2020-12-10  Thursday  \n",
+       "86 1900-01-01 01:00:00     59.0    2020-12-11    Friday  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_r = to_this_week_table(df_r)\n",
     "df_r.head()"
    ]
   },
