--- a/dev/dev_data_analysis.ipynb
+++ b/dev/dev_data_analysis.ipynb
@@ -4,11 +4,318 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/congyu/congyu_program/pythons/inits/p_study_time_board\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.chdir(os.path.dirname(os.getcwd()))\n",
+    "print(os.getcwd())\n",
+    "\n",
+    "from studytimeboard.utils.gsheet import GoogleSheet\n",
+    "from studytimeboard.data_analysis import *\n",
+    "from studytimeboard.constant import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.gsheet import GoogleSheet\n",
-    "from data_analysis import *\n",
-    "from constant import *"
+    "gs = GoogleSheet.read_from(STUDY_TIME_TABLE_NAME)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alpha</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Delta</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Delta</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>08:00</td>\n",
+       "      <td>15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Beta</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>08:00</td>\n",
+       "      <td>15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Diqing</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>19:00</td>\n",
+       "      <td>23:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.16</td>\n",
+       "      <td>11:20</td>\n",
+       "      <td>12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.16</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>12:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.17</td>\n",
+       "      <td>00:01</td>\n",
+       "      <td>00:25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.18</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2020.12.18</td>\n",
+       "      <td>18:00</td>\n",
+       "      <td>19:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>94 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      name        date start_time end_time\n",
+       "0    Alpha  2020.11.09      11:00    12:00\n",
+       "1    Delta  2020.11.09      11:00    12:00\n",
+       "2    Delta  2020.11.09      08:00    15:00\n",
+       "3     Beta  2020.11.09      08:00    15:00\n",
+       "4   Diqing  2020.11.09      19:00    23:00\n",
+       "..     ...         ...        ...      ...\n",
+       "89  Congyu  2020.12.16      11:20    12:00\n",
+       "90  Congyu  2020.12.16      12:00    12:10\n",
+       "91  Congyu  2020.12.17      00:01    00:25\n",
+       "92  Congyu  2020.12.18      11:00    12:00\n",
+       "93  Congyu  2020.12.18      18:00    19:00\n",
+       "\n",
+       "[94 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_dur = gs.sheet(sheet_name=SHEET1, least_col_name=START_TIME)\n",
+    "df_dur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>act</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LiuYang</td>\n",
+       "      <td>go</td>\n",
+       "      <td>2020.11.30</td>\n",
+       "      <td>10:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>go</td>\n",
+       "      <td>2020.11.30</td>\n",
+       "      <td>10:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nia.Dai</td>\n",
+       "      <td>hold</td>\n",
+       "      <td>2020.11.30</td>\n",
+       "      <td>10:50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>LiuYang</td>\n",
+       "      <td>hold</td>\n",
+       "      <td>2020.11.30</td>\n",
+       "      <td>10:50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>go</td>\n",
+       "      <td>2020.11.30</td>\n",
+       "      <td>11:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>Shangsu</td>\n",
+       "      <td>hold</td>\n",
+       "      <td>2020.12.19</td>\n",
+       "      <td>18:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>Shangsu</td>\n",
+       "      <td>go</td>\n",
+       "      <td>2020.12.19</td>\n",
+       "      <td>19:20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>Shangsu</td>\n",
+       "      <td>hold</td>\n",
+       "      <td>2020.12.19</td>\n",
+       "      <td>20:40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>Shangsu</td>\n",
+       "      <td>go</td>\n",
+       "      <td>2020.12.19</td>\n",
+       "      <td>23:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>go</td>\n",
+       "      <td>2020.12.20</td>\n",
+       "      <td>10:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>86 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name   act        date   time\n",
+       "0   LiuYang    go  2020.11.30  10:00\n",
+       "1    Congyu    go  2020.11.30  10:00\n",
+       "2   Nia.Dai  hold  2020.11.30  10:50\n",
+       "3   LiuYang  hold  2020.11.30  10:50\n",
+       "4    Congyu    go  2020.11.30  11:00\n",
+       "..      ...   ...         ...    ...\n",
+       "81  Shangsu  hold  2020.12.19  18:00\n",
+       "82  Shangsu    go  2020.12.19  19:20\n",
+       "83  Shangsu  hold  2020.12.19  20:40\n",
+       "84  Shangsu    go  2020.12.19  23:00\n",
+       "85   Congyu    go  2020.12.20  10:00\n",
+       "\n",
+       "[86 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_eve = gs.sheet(sheet_name=SHEET2, least_col_name=NAME)\n",
+    "df_eve"
    ]
   },
   {
@@ -98,12 +405,8 @@
     }
    ],
    "source": [
-    "gs = GoogleSheet.read_from(STUDY_TIME_TABLE_NAME)\n",
-    "df_dur = gs.sheet(sheet_name=SHEET1, least_col_name=START_TIME)\n",
-    "df_eve = gs.sheet(sheet_name=SHEET2, least_col_name=NAME)\n",
     "df = merge_dur_eve(df_dur, df_eve)\n",
-    "    \n",
-    "    \n",
+    "     \n",
     "df.head()"
    ]
   },
@@ -400,9 +703,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "congyuml",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "congyuml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
