before switch to gs data input

--- a/dev/dev_data_analysis.ipynb
+++ b/dev/dev_data_analysis.ipynb
@@ -38,6 +38,50 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_finder', '_list_cells', '_properties', 'acell', 'add_cols', 'add_protected_range', 'add_rows', 'append_row', 'append_rows', 'batch_get', 'batch_update', 'cell', 'clear', 'clear_basic_filter', 'client', 'col_count', 'col_values', 'copy_to', 'delete_columns', 'delete_dimension', 'delete_row', 'delete_rows', 'duplicate', 'export', 'find', 'findall', 'format', 'freeze', 'frozen_col_count', 'frozen_row_count', 'get', 'get_all_records', 'get_all_values', 'id', 'insert_row', 'insert_rows', 'merge_cells', 'range', 'resize', 'row_count', 'row_values', 'set_basic_filter', 'sort', 'spreadsheet', 'title', 'update', 'update_acell', 'update_cell', 'update_cells', 'update_index', 'update_title', 'updated', 'url']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sheet = gs.table.worksheet(SHEET1)\n",
+    "print(dir(sheet))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'spreadsheetId': '1FGoY2IrXavkyiRGZQkvTIgHwHmIrlohR-IDoQ5K4hw4',\n",
+       " 'tableRange': 'duration!A1:D95',\n",
+       " 'updates': {'spreadsheetId': '1FGoY2IrXavkyiRGZQkvTIgHwHmIrlohR-IDoQ5K4hw4',\n",
+       "  'updatedRange': 'duration!A96:D96',\n",
+       "  'updatedRows': 1,\n",
+       "  'updatedColumns': 4,\n",
+       "  'updatedCells': 4}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sheet.append_row([\"test\" for _ in range(4)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/html": [
        "<div>\n",
