--- a/dev/dev_data_analysis.ipynb
+++ b/dev/dev_data_analysis.ipynb
@@ -730,72 +730,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/congyu/.virtualenvs/congyuml/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_r[\"is_today\"]=[\"today\" if i else \"not_today\" for i in df_r[\"date\"]==datetime2date(datetime.today())]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def barhplot_stacked(x, y, hue, data, sort_by_x=True):\n",
-    "    \"\"\"\n",
-    "\n",
-    "    > df_test = pd.DataFrame({\n",
-    "            \"x\": [20, 35, 30, 35, 27],\n",
-    "            \"y\": ['G1', 'G1', 'G2', 'G2', 'G3'],\n",
-    "            \"hue\": [\"stage1\", \"stage2\", \"stage1\", \"stage2\",\"stage1\"]\n",
-    "        })\n",
-    "\n",
-    "    > barhplot_stacked(\"x\", \"y\", \"hue\", df_test)\n",
-    "    \n",
-    "\n",
-    "    \"\"\"\n",
-    "    plt.figure(figsize=(20, 10))\n",
-    "\n",
-    "    if sort_by_x:\n",
-    "        df_sort = data.groupby(y)[x].apply(sum)\n",
-    "        df_sort = df_sort.reset_index()\n",
-    "        df_sort = df_sort.sort_values(by=x, ascending=True)\n",
-    "        ys = df_sort[y]\n",
-    "    else:\n",
-    "        ys = sorted(set(data[y]))\n",
-    "\n",
-    "    hues = sorted(set(data[hue]))\n",
-    "    last_xs = [0 for _ in range(len(ys))]\n",
-    "    for huei in hues:\n",
-    "        xs = [sum(data.loc[(data[y] == yi) & (data[hue] == huei), x]) for yi in ys]\n",
-    "\n",
-    "        plt.barh(ys, xs, left=last_xs, label=huei)\n",
-    "        last_xs = xs\n",
-    "\n",
-    "    plt.ylabel(y)\n",
-    "    plt.legend()\n",
-    "\n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [
@@ -811,7 +745,7 @@
     }
    ],
    "source": [
-    "barhplot_stacked(\"minutes\", \"name\", \"is_today\", df_r)"
+    "barhplot_stacked(\"minutes\", \"name\", \"weekday\", df_r)"
    ]
   },
   {
