--- a/dev/dev_data_sql_db.ipynb
+++ b/dev/dev_data_sql_db.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1217,141 +1217,104 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Congyu</td>\n",
-       "      <td>2021.01.17</td>\n",
+       "      <td>Alpha</td>\n",
+       "      <td>2020.11.09</td>\n",
        "      <td>11:00</td>\n",
        "      <td>12:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Shangsu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>13:00</td>\n",
-       "      <td>14:00</td>\n",
+       "      <td>Delta</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>12:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Congyu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>14:00</td>\n",
+       "      <td>Delta</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>08:00</td>\n",
        "      <td>15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Nia.Dai</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>05:00</td>\n",
-       "      <td>06:00</td>\n",
+       "      <td>Beta</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>08:00</td>\n",
+       "      <td>15:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Diqing</td>\n",
+       "      <td>2020.11.09</td>\n",
+       "      <td>19:00</td>\n",
+       "      <td>23:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>Amber</td>\n",
+       "      <td>2021.01.18</td>\n",
+       "      <td>23:31</td>\n",
+       "      <td>23:59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>L.path</td>\n",
+       "      <td>2021.01.18</td>\n",
+       "      <td>09:37</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>Amber</td>\n",
+       "      <td>2021.01.18</td>\n",
+       "      <td>09:41</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>Congyu</td>\n",
+       "      <td>2021.01.18</td>\n",
+       "      <td>09:41</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
        "      <td>Shangsu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>15:00</td>\n",
-       "      <td>15:25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Congyu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>15:24</td>\n",
-       "      <td>15:39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Shangsu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>15:40</td>\n",
-       "      <td>15:41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Shangsu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>15:42</td>\n",
-       "      <td>15:43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Congyu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>16:08</td>\n",
-       "      <td>16:12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Shangsu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>15:47</td>\n",
-       "      <td>16:25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Nia.Dai</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>17:47</td>\n",
-       "      <td>17:48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Congyu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>17:50</td>\n",
-       "      <td>18:31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Nia.Dai</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>21:33</td>\n",
-       "      <td>21:33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Nia.Dai</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>8:00</td>\n",
-       "      <td>9:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Congyu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>20:18</td>\n",
-       "      <td>21:35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Congyu</td>\n",
-       "      <td>2021.01.17</td>\n",
-       "      <td>21:38</td>\n",
-       "      <td>21:38</td>\n",
+       "      <td>2021.01.18</td>\n",
+       "      <td>09:44</td>\n",
+       "      <td>10:24</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>270 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       name        date start_time end_time\n",
-       "0    Congyu  2021.01.17      11:00    12:00\n",
-       "1   Shangsu  2021.01.17      13:00    14:00\n",
-       "2    Congyu  2021.01.17      14:00    15:00\n",
-       "3   Nia.Dai  2021.01.17      05:00    06:00\n",
-       "4   Shangsu  2021.01.17      15:00    15:25\n",
-       "5    Congyu  2021.01.17      15:24    15:39\n",
-       "6   Shangsu  2021.01.17      15:40    15:41\n",
-       "7   Shangsu  2021.01.17      15:42    15:43\n",
-       "8    Congyu  2021.01.17      16:08    16:12\n",
-       "9   Shangsu  2021.01.17      15:47    16:25\n",
-       "10  Nia.Dai  2021.01.17      17:47    17:48\n",
-       "11   Congyu  2021.01.17      17:50    18:31\n",
-       "12  Nia.Dai  2021.01.17      21:33    21:33\n",
-       "13  Nia.Dai  2021.01.17       8:00     9:00\n",
-       "14   Congyu  2021.01.17      20:18    21:35\n",
-       "15   Congyu  2021.01.17      21:38    21:38"
+       "        name        date start_time end_time\n",
+       "0      Alpha  2020.11.09      11:00    12:00\n",
+       "1      Delta  2020.11.09      11:00    12:00\n",
+       "2      Delta  2020.11.09      08:00    15:00\n",
+       "3       Beta  2020.11.09      08:00    15:00\n",
+       "4     Diqing  2020.11.09      19:00    23:00\n",
+       "..       ...         ...        ...      ...\n",
+       "265    Amber  2021.01.18      23:31    23:59\n",
+       "266   L.path  2021.01.18      09:37  unknown\n",
+       "267    Amber  2021.01.18      09:41  unknown\n",
+       "268   Congyu  2021.01.18      09:41  unknown\n",
+       "269  Shangsu  2021.01.18      09:44    10:24\n",
+       "\n",
+       "[270 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
