--- a/dev/dev_data_sql_db.ipynb
+++ b/dev/dev_data_sql_db.ipynb
@@ -2,22 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/congyu/congyu_program/pythons/inits/p_study_time_board\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/congyu/.virtualenvs/congyuml/lib/python3.6/site-packages/flask_sqlalchemy/__init__.py:834: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.\n",
-      "  'SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and '\n"
+      "/home/congyu/congyu_program/pythons/inits\n"
      ]
     }
    ],
@@ -26,16 +18,37 @@
     "os.chdir(os.path.dirname(os.getcwd()))\n",
     "print(os.getcwd())\n",
     "\n",
-    "from studytimeboard.utils.gsheet import GoogleSheet\n",
-    "from studytimeboard.data_analysis import *\n",
+    "from studytimeboard.tools.gsheet import GoogleSheet\n",
+    "from studytimeboard.utils.data_analysis import *\n",
     "from studytimeboard.constant import *\n",
     "from studytimeboard import db\n",
-    "from studytimeboard import StudyEventDB"
+    "from studytimeboard import StudyEventDB, UserDB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "users = UserDB.query.all()\n",
+    "\n",
+    "print(len(users))\n",
+    "for user in users:\n",
+    "    print(user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
