Added .env file for storing server side env variables

--- a/backend/dev/dev_mongodb_atlas.ipynb
+++ b/backend/dev/dev_mongodb_atlas.ipynb
@@ -30,19 +30,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pymongo\n",
     "import datetime\n",
     "from bson.json_util import dumps\n",
-    "import json\n"
+    "import json\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the env variables from .env file\n",
+    "load_dotenv()\n",
+    "JWT_DURATION = os.getenv('JWT_DURATION')\n",
+    "JWT_SECRET = os.getenv('JWT_SECRET')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "b'$2b$12$ApTK.IqCNWSv5bRvRFIN..'\nb'$2b$12$ApTK.IqCNWSv5bRvRFIN..Snlah.jLrb1mrk3s3lBJ4I.jwMp20DK'\n"
+      "b'$2b$12$OUNLQFlVsRc/d9pkR3q31.'\nb'$2b$12$OUNLQFlVsRc/d9pkR3q31.Y6O9GGNVItAIRjekOTsPPoRxUx5HEDS'\n"
      ]
     }
    ],
@@ -117,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "60998a29f5b8d5b4eec375a2\n"
+      "6099aae89ad0e6654dc5d997\n"
      ]
     }
    ],
@@ -147,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6IjYwOTk4YTI5ZjViOGQ1YjRlZWMzNzVhMiIsInVzZXJuYW1lIjoidGVzdHVzZXIiLCJleHAiOjE2MjA3NjE1MTN9.9Aa-Yqa0PqJxtw6E-KHOJEi3RW2D9ZZSSaJH8Hr4JCo\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6IjYwOTlhYWU4OWFkMGU2NjU0ZGM1ZDk5NyIsInVzZXJuYW1lIjoidGVzdHVzZXIiLCJleHAiOjE2MjA3Njk4OTZ9.5Q6KFMmUxJxR0SNWOoYfTl3DQdioNv5L_4glQPR04tE\n"
      ]
     }
    ],
@@ -175,14 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'id': '60998a29f5b8d5b4eec375a2', 'username': 'testuser', 'exp': 1620761513}\n"
+      "{'id': '6099aae89ad0e6654dc5d997', 'username': 'testuser', 'exp': 1620769896}\n"
      ]
     }
    ],
