Server side:  - Added basic implementation for connecting to database MongoDB atlas  - Added bcrypt for hashing password  - Added json web token decode/encode
Todo:
 - client side jwt storage and usage

--- a/backend/dev/dev_mongodb_atlas.ipynb
+++ b/backend/dev/dev_mongodb_atlas.ipynb
@@ -10,11 +10,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1-final"
+   "version": "3.7.1"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python371jvsc74a57bd0e534e48711db4d1e1c48977d0d14ff85b1f16d41bcc4fdfd88268a329b3c9d66",
+   "name": "python371jvsc74a57bd0e774977668b7c0ae8309835a5187aa7fbf7669e7d0bb59755bc63e573643edcd",
    "display_name": "Python 3.7.1 64-bit"
   }
  },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,40 +44,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get the env variables from .env file\n",
     "load_dotenv()\n",
     "JWT_DURATION = os.getenv('JWT_DURATION')\n",
-    "JWT_SECRET = os.getenv('JWT_SECRET')\n"
+    "JWT_SECRET = os.getenv('JWT_SECRET')\n",
+    "MONGODB_SRV = os.getenv('MONGODB_SRV')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Env variables to load from file\n",
-    "JWT_SECRET = \"qausas12lo3iknoiuh1o4i23jo10537\"\n",
-    "JWT_DURATION = 86400  # Total seconds of 24 hours."
+    "# JWT_SECRET = \"qausas12lo3iknoiuh1o4i23jo10537\"\n",
+    "# JWT_DURATION = 86400  # Total seconds of 24 hours."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up connection to database called \"dev\"\n",
-    "client = pymongo.MongoClient('mongodb+srv://dbGuru:dbgurustb@cluster0.mzk5u.mongodb.net/dev')"
+    "client = pymongo.MongoClient(MONGODB_SRV)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "b'$2b$12$OUNLQFlVsRc/d9pkR3q31.'\nb'$2b$12$OUNLQFlVsRc/d9pkR3q31.Y6O9GGNVItAIRjekOTsPPoRxUx5HEDS'\n"
+      "True\nb'$2b$12$g1B2bogBsz.OqvTp1B/hpu'\nb'$2b$12$g1B2bogBsz.OqvTp1B/hpuCQoTggWBtY3o4AzipZAE57htmoxY7nS'\n"
      ]
     }
    ],
@@ -125,20 +126,22 @@
     "salt = bcrypt.gensalt()\n",
     "hashed = bcrypt.hashpw(passwdBytes, salt)\n",
     "\n",
+    "print(bcrypt.checkpw(password.encode(encoding='UTF-8',errors='strict'), hashed))\n",
+    "\n",
     "print(salt)\n",
     "print(hashed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "6099aae89ad0e6654dc5d997\n"
+      "609fa4e2f9f2b773b3759c32\n"
      ]
     }
    ],
@@ -153,6 +156,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "testuser\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if user exists, fonudDoc is set to None if no document containing username exists\n",
+    "user = collection.find_one({\"name\" : username})\n",
+    "print(user[\"name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count documents of collection\n",
+    "print(collection.estimated_document_count())"
+   ]
+  },
+  {
    "source": [
     "# Jason Web Token (JWT)"
    ],
@@ -161,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,33 +210,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6IjYwOTlhYWU4OWFkMGU2NjU0ZGM1ZDk5NyIsInVzZXJuYW1lIjoidGVzdHVzZXIiLCJleHAiOjE2MjA3Njk4OTZ9.5Q6KFMmUxJxR0SNWOoYfTl3DQdioNv5L_4glQPR04tE\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6IjYwOWZhNGUyZjlmMmI3NzNiMzc1OWMzMiIsInVzZXJuYW1lIjoidGVzdHVzZXIiLCJleHAiOjE2MjExNjE1NzB9.-_YYMvVb8Jt3YhRn8JvfcUnqL3OsDGYMlGHwcqYUgqU\n"
      ]
     }
    ],
    "source": [
     "# Encode to a JWT\n",
-    "encoded = jwt.encode({'id': str(_id), 'username': username, \"exp\":datetime.datetime.utcnow() + datetime.timedelta(seconds=JWT_DURATION)}, JWT_SECRET, algorithm = 'HS256')\n",
+    "encoded = jwt.encode({'id': str(_id), 'username': username, \"exp\":datetime.datetime.utcnow() + datetime.timedelta(seconds=int(JWT_DURATION))}, JWT_SECRET, algorithm = 'HS256')\n",
     "print(encoded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'id': '6099aae89ad0e6654dc5d997', 'username': 'testuser', 'exp': 1620769896}\n"
+      "{'id': '609fa4e2f9f2b773b3759c32', 'username': 'testuser', 'exp': 1621161570}\n"
      ]
     }
    ],
