rewrote mongodb client to a more elegant way fixed the "can not read status from undefined bug" by modifying the get post put delete methods in the HttpService.js

--- a/backend/dev/dev_mongodb_atlas.ipynb
+++ b/backend/dev/dev_mongodb_atlas.ipynb
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymongo\n",
+    "from pymongo import MongoClient\n",
     "import datetime\n",
     "from bson.json_util import dumps\n",
     "import json\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Env variables to load from file\n",
-    "# JWT_SECRET = \"qausas12lo3iknoiuh1o4i23jo10537\"\n",
-    "# JWT_DURATION = 86400  # Total seconds of 24 hours."
+    "# Set up connection to database called \"dev\"\n",
+    "client = MongoClient(MONGODB_SRV)"
    ]
   },
   {
@@ -72,19 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up connection to database called \"dev\"\n",
-    "client = pymongo.MongoClient(MONGODB_SRV)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Get database object and collection object\n",
-    "db = pymongo.database.Database(client, 'dev')\n",
-    "collection = pymongo.collection.Collection(db, 'users')"
+    "db = client.dev\n",
+    "collection = db.users"
    ]
   },
   {
@@ -96,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "True\nb'$2b$12$g1B2bogBsz.OqvTp1B/hpu'\nb'$2b$12$g1B2bogBsz.OqvTp1B/hpuCQoTggWBtY3o4AzipZAE57htmoxY7nS'\n"
+      "True\nb'$2b$12$R59Mi8CBsTeLR2N4aAZBe.'\nb'$2b$12$R59Mi8CBsTeLR2N4aAZBe.6mw9Xq1EltbriHFQEQxs/Fnv53F0wBq'\n"
      ]
     }
    ],
@@ -134,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "609fa4e2f9f2b773b3759c32\n"
+      "60a426f305006e13337df86f\n"
      ]
     }
    ],
@@ -157,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -176,14 +165,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "23\n"
+      "15\n"
      ]
     }
    ],
@@ -201,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6IjYwOWZhNGUyZjlmMmI3NzNiMzc1OWMzMiIsInVzZXJuYW1lIjoidGVzdHVzZXIiLCJleHAiOjE2MjExNjE1NzB9.-_YYMvVb8Jt3YhRn8JvfcUnqL3OsDGYMlGHwcqYUgqU\n"
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6IjYwYTQyNmYzMDUwMDZlMTMzMzdkZjg2ZiIsInVzZXJuYW1lIjoidGVzdHVzZXIiLCJleHAiOjE2MjE0NTcwMTJ9.co7YDNqqgOELZH49HXn6QI1k60EPmunxQd-rS_AmKvg\n"
      ]
     }
    ],
@@ -229,14 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'id': '609fa4e2f9f2b773b3759c32', 'username': 'testuser', 'exp': 1621161570}\n"
+      "{'id': '60a426f305006e13337df86f', 'username': 'testuser', 'exp': 1621457012}\n"
      ]
     }
    ],
